    *.torrent urls.
  * Use wget -q --show-progress for less verbose wget output,
    when built with wget 1.16.
  * Added bittorrent special remote.
  * addurl behavior change: When downloading an url ending in .torrent,
    it will download files from bittorrent, instead of the old behavior
    of adding the torrent file to the repository.
  * Added Recommends on aria2 and bittornado | bittorrent.

 -- Joey Hess <id@joeyh.name>  Fri, 05 Dec 2014 13:42:08 -0400

git-annex (5.20141203) unstable; urgency=medium

  * proxy: New command for direct mode repositories, allows bypassing
    the direct mode guard in a safe way to do all sorts of things
    including git revert, git mv, git checkout ...
  * undo: New command to undo the most recent change to a file
    or to the contents of a directory.
  * Add undo action to nautilus and konqueror integration.
  * diffdriver: New git-annex command, to make git external diff drivers
    work with annexed files.
  * pre-commit: Block partial commit of unlocked annexed file, since
    that left a typechange staged in index due to some infelicity of git's
    handling of partial commits.
  * Work around behavior change in lsof 4.88's -F output format.
  * S3: Switched to using the haskell aws library.
  * S3: No longer buffers entire files in memory when uploading without
    chunking.
  * S3: When built with a new enough version of the haskell aws library,
    supports doing multipart uploads, in order to store extremely large
    files in S3 when not using chunking.
  * Don't show "(gpg)" when decrypting the remote encryption cipher,
    since this could be taken to read that's the only time git-annex
    runs gpg, which is not the case.
  * Debian package is now maintained by Gergely Nagy.
  * Windows: Remove Alt+A keyboard shortcut, which turns out to have scope
    outside the menus.
  * Windows: Install ssh and other bundled programs to Git/cmd,
    instead of Git/bin, since the latter is not in the default msysgit PATH.