@@ -13,7 +13,10 @@ git-annex (5.20141204) UNRELEASED; urgency=medium
   * addurl behavior change: When downloading an url ending in .torrent,
     it will download files from bittorrent, instead of the old behavior
     of adding the torrent file to the repository.
-  * Added Recommends on aria2 and bittornado | bittorrent.
+  * Added Recommends on aria2.
+  * When possible, build with the haskell torrent library for parsing
+    torrent files. As a fallback, can instead use btshowmetainfo from
+    bittornado | bittorrent.
 
  -- Joey Hess <id@joeyh.name>  Fri, 05 Dec 2014 13:42:08 -0400
 
